--- a/register.html
+++ b/register.html
@@ -9,9 +9,13 @@
    <body>
       <div class="wrapper">
          <div class="title">
-            Login Form
+            Register Form
          </div>
          <form action="#">
+            <div class="field">
+                <input type="text" required>
+                <label>Full Name</label>
+             </div>
             <div class="field">
                <input type="text" required>
                <label>Email Address</label>
@@ -20,6 +24,14 @@
                <input type="password" required>
                <label>Password</label>
             </div>
+            <div class="content">
+                <label>Male</label>
+
+                <input type="radio" required >
+                <label>Female</label>
+
+                <input type="radio" required >
+             </div>
             <div class="content">
                <div class="checkbox">
                   <input type="checkbox" id="remember-me">
