--- a/contact.html
+++ b/contact.html
@@ -58,16 +58,9 @@
                                         <li class="active"><a href="index.html">Home</a></li>
                                         <li><a href="courses.html">Courses</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="#">Blog</a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog_details.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Element</a></li>
-                                            </ul>
-                                        </li>
                                         <li><a href="contact.html">Contact</a></li>
                                         <!-- Button -->
-                                        <li class="button-header margin-left "><a href="#" class="btn">Join</a></li>
+                                        <li class="button-header margin-left "><a href="register.html" class="btn">Join</a></li>
                                         <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
                                     </ul>
                                 </nav>
@@ -229,11 +222,12 @@
                                 <div class="footer-logo mb-25">
                                     <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                                 </div>
-                                <div class="footer-tittle">
+                                <!-- <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                        <p>The automated process starts as soon as your clothes go into the machine.
+                                        </p>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- social -->
                                 <div class="footer-social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -246,13 +240,11 @@
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Our solutions</h4>
+                                <h4 class="bor-col">Our solutions</h4>
                                 <ul>
                                     <li><a href="#">Design & creatives</a></li>
                                     <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
                                     <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -260,13 +252,11 @@
                     <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Support</h4>
+                                <h4 class="bor-col">Support</h4>
                                 <ul>
                                     <li><a href="#">Design & creatives</a></li>
                                     <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
                                     <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -274,18 +264,23 @@
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Company</h4>
+                                <h4 class="bor-col">Company</h4>
                                 <ul>
                                     <li><a href="#">Design & creatives</a></li>
-                                    <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
                                     <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="language-box">
+                <select name="language-box" id="">
+                    <option value="">English</option>
+                    <option value="">Arabic</option>
+                </select>
+
+
             </div>
         </div>
         <!-- footer-bottom area -->
@@ -295,7 +290,8 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                <p><!-- Link back to Colorlib can' t be removed. Template is licensed under CC BY
+                                    3.0. -->
                                     Copyright &copy;
                                     <script>document.write(new Date().getFullYear());</script> All rights reserved |
                                     This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
