--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                                                 <li><a href="contact.html">Contact</a></li>
                                                 <!-- Button -->
-                                                <li class="button-header margin-left "><a href="#" class="btn">Join</a>
+                                                <li class="button-header margin-left "><a href="register.html" class="btn">Join</a>
                                                 </li>
                                                 <li class="button-header"><a href="login.html" class="btn btn3">Log
                                                         in</a></li>
