--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                         of each learner. We've meticulously curated a vast array of courses, workshops,
                                         and resources covering a multitude of subjects, from fundamental academic
                                         disciplines to specialized vocational training.</p>
-                                    <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Join
+                                    <a href="register.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Join
                                         for Free</a>
                                 </div>
                             </div>
