--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                                     <nav aria-label="breadcrumb">
                                         <ol class="breadcrumb">
                                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                            <li class="breadcrumb-item"><a href="#">about</a></li>
+                                            <li class="breadcrumb-item"><a href="about.html">about</a></li>
                                         </ol>
                                     </nav>
                                     <!-- breadcrumb End -->
