--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                             </div>
                             <div class="properties__caption">
                                 <h1>Media</h1>
-                                <p>Media is a communication and information transmission used to convey news,
+                                <p>Mediaing is a communication and information transmission used to convey news,
                                     information, and ideas from their sources to a wide audience. The purpose
                                     is to provide a way for people to learn about what is happening in the world around
                                     them and stay informed about developments and events.
@@ -281,7 +281,7 @@
                                     knowledge with technical skills to solve challenges and develop solutions for a wide
                                     range.
                                 </p>
-                                <a href="#" class="border-btn border-btn2">Find out more </a>
+                                <a href="#" class="border-btn border-btn2">Find out more</a>
                             </div>
 
                         </div>
