--- a/index.html
+++ b/index.html
@@ -71,15 +71,11 @@
 
                                                 <li><a href="contact..html">Contact</a></li>
                                                 <!-- Button -->
-                                                <<<<<<< HEAD <li class="button-header margin-left "><a
-                                                        href="register.html" class="btn">Join</a>
-                                                    =======
-                                                    <li class="button-header margin-left "><a href="register.html"
-                                                            class="btn">Join</a>
-                                                        >>>>>>> 95a7a75fd59add84db7d5c690ffded650d1b5fdb
-                                                    </li>
-                                                    <li class="button-header"><a href="login.html" class="btn btn3">Log
-                                                            in</a></li>
+                                                <li class="button-header margin-left "><a href="register.html"
+                                                        class="btn">Join</a>
+                                                </li>
+                                                <li class="button-header"><a href="login.html" class="btn btn3">Log
+                                                        in</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -112,9 +108,6 @@
                                         of each learner. We've meticulously curated a vast array of courses, workshops,
                                         and resources covering a multitude of subjects, from fundamental academic
                                         disciplines to specialized vocational training.</p>
-                                    <a href="register.html" class="btn hero-btn" data-animation="fadeInLeft"
-                                        data-delay="0.7s">Join
-                                        for Free</a>
                                 </div>
                             </div>
                         </div>
@@ -256,7 +249,7 @@
                             </div>
                             <div class="properties__caption">
                                 <h1>Media</h1>
-                                <p>Mediaing is a communication and information transmission used to convey news,
+                                <p>Media is a communication and information transmission used to convey news,
                                     information, and ideas from their sources to a wide audience. The purpose
                                     is to provide a way for people to learn about what is happening in the world around
                                     them and stay informed about developments and events.
