--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/apple-touch-icon.png" alt=""></a>
+                                    <a href="index.html"><img src="assets/img/gallery/IMG-20230802-WA0001.png"
+                                            style="width: 120px; height: 120px;" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
@@ -69,7 +70,7 @@
                                                 <li><a href="courses.html">Courses</a></li>
                                                 <li><a href="about.html">About</a></li>
 
-                                                <li><a href="contact..html">Contact</a></li>
+                                                <li><a href="contact.html">Contact</a></li>
                                                 <!-- Button -->
                                                 <li class="button-header margin-left "><a href="register.html"
                                                         class="btn">Join</a>
