--- a/index.html
+++ b/index.html
@@ -212,35 +212,17 @@
                             </div>
                             <div class="properties__caption">
                                 <h1>Language</h1>
-                                <p>Learning languages is an important and enjoyable process that allows individuals to
-                                    open new windows into the world of different cultures and societies. By learning new
-                                    languages, people can effectively communicate with others, understand their
-                                    cultures, and traditions.
+                                <p>Design is the process of creating and planning various things in a way that combines
+                                    aesthetics and functionality. It is used in a wide range of fields, such as graphic
+                                    design, product design, user interface design for websites and applications,
+                                    interior design, and more.The aim is to enhance the user experience
+
                                 </p>
                                 <a href="#" class="border-btn border-btn2">Find out more</a>
                             </div>
 
                         </div>
                     </div>
-                    <!-- Single -->
-                    <!-- Single -->
-                    <!-- <div class="properties pb-20">
-                        <div class="properties__card">
-                            <div class="properties__img overlay1">
-                                <a href="#"><img src="assets/img/AdobeStock_68655192_Preview.jpeg" alt=""></a>
-                            </div>
-                            <div class="properties__caption">
-                                <h1>Marketing</h1>
-                                <p>Electronic marketing, or digital marketing, is the process of promoting and selling
-                                    products and services using the Internet and digital media. It is a vital component
-                                    of modern marketing strategies, as it allows reaching a wide audience of consumers
-                                    through digital channels.
-                                </p>
-                                <a href="#" class="border-btn border-btn2">Find out more</a>
-                            </div>
-
-                        </div>
-                    </div> -->
                     <!-- Single -->
                     <!-- Single -->
                     <div class="properties pb-20">
@@ -251,7 +233,7 @@
                             <div class="properties__caption">
                                 <h1>Media</h1>
                                 <p>Media is a communication and information transmission used to convey news,
-                                    information, and ideas from their sources to a wide audience. The purpose
+                                    information, and ideas from their sources to a wide audience.The purpose
                                     is to provide a way for people to learn about what is happening in the world around
                                     them and stay informed about developments and events.
                                 </p>
@@ -291,8 +273,8 @@
                                 <h1>Business Managment</h1>
                                 <p>Business management is the process of planning, organizing, directing, and
                                     controlling resources, activities, and operations within organizations and companies
-                                    to achieve specific objectives.It is both a science and an art that aims to achieve
-                                    efficiency and effectiveness.
+                                    to achieve specific objectives. It is both a science and an art that aims to achieve
+                                    efficiency and effectiveness in utilizing available resources.
 
                                 </p>
                                 <a href="#" class="border-btn border-btn2">Find out more</a>
