--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <div class="team-active">
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/Baraa.jpg" alt="">
+                            <img src="assets/img/WhatsApp Image 2023-08-04 at 4.03.32 PM.jpeg" alt="">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Bara'a Alattar</a></h5>
