--- a/index.html
+++ b/index.html
@@ -497,14 +497,14 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="language-box">
+                <div class="language-box">
                     <select name="language-box" id="languageselect">
                         <option value="en">English</option>
                         <option value="ar">Arabic</option>
                     </select>
 
 
-                </div> -->
+                </div>
             </div>
             <!-- footer-bottom area -->
             <div class="footer-bottom-area">
