--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/apple-touch-icon.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/gallery/IMG-20230802-WA0001.png"   style="width: 120px; height: 120px;" alt=""></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10">
