--- a/register.html
+++ b/register.html
@@ -22,8 +22,8 @@
             <label>Full Name</label>
          </div>
          <div class="field">
-            <input type="text" required>
-            <label>Email Address</label>
+            <input type="email" required>
+            <label >Email Address</label>
          </div>
          <div class="field">
             <input id="pass" type="password" required onblur="validatePassword()">
@@ -59,7 +59,6 @@
                   <option value="us">USA</option>
                   <option>Canada</option>
                   <option>Argentina</option>
-
                </optgroup>
 
             </select>
