--- a/register.html
+++ b/register.html
@@ -98,13 +98,11 @@
             passLabel.style.display = "block";
          }
          else {
-            idText.style.borderColor = "green";
+            pass.style.borderColor = "green";
             passLabel.style.color = "black";
             passLabel.innerHTML = "";
             passLabel.style.display = "none";
          }
-
-
          if(rePassInput.value==pass.value){
             rePassInput.style.borderColor = "green";
             rePassLabel.style.color = "black";
